--- a/src/style.sass
+++ b/src/style.sass
@@ -17,3 +17,6 @@ body
 .hide-O
     opacity: 0 !important
     pointer-events: none !important
+.clicked
+    background-color: #f3faff !important
+    color: black !important
