--- a/src/tabs.sass
+++ b/src/tabs.sass
@@ -12,11 +12,11 @@
         height: 100%
         text-align: center
         font-size: 1.2vw
-        padding-right: 5px
+        padding-right: 8px
         color: rgb(255, 255, 255)
         &:hover
             cursor: pointer
-            background-color: rgb(255, 255, 255)
+            background-color: #f3faff
             transition-duration: 0.5s
             color: black
     .tab0
