--- a/src/style.sass
+++ b/src/style.sass
@@ -8,6 +8,7 @@ body
     scrollbar-width: none
     width: 100%
     height: 100vh
+    font-family: 'Share Tech', sans-serif
 *
     box-sizing: border-box
     padding: 0
@@ -20,3 +21,21 @@ body
 .clicked
     background-color: #f3faff !important
     color: black !important
+a:link
+    color: rgb(1, 1, 1)
+    text-decoration: none
+
+/* visited link */
+a:visited
+    color: rgb(1, 1, 1)
+    text-decoration: none
+
+/* mouse over link */
+a:hover
+    color: rgb(1, 1, 1)
+    text-decoration: none
+
+/* selected link */
+a:active
+    color: rgb(1, 1, 1)
+    text-decoration: none
