--- a/src/home.sass
+++ b/src/home.sass
@@ -1,2 +1,68 @@
+
+.home
+    margin-top: 2rem
+    position: absolute
+    overflow: hidden
+    text-align: center
+    background: transparent
+    // background-image: url('./images/cpu.jpg')
+    // background-repeat: no-repeat
+    // background-attachment: fixed
+    // background-position-y: 50%
+    #matrix
+        width: 100%
+        height: 100%
+        background-color: transparent
+.btn-div
+    position: relative
+    text-align: center
+    height: 50px
+    width: 50px
+    margin-left: 50%
+    transform: translate(-50%)
+    cursor: pointer
+    &:hover
+        .neon-btn
+            border-left: solid #000000 2px
+            border-right: solid #000000 2px
+    .neon-btn
+        position: relative
+        border-radius: 50%
+        height: 100%
+        width: 100%
+        border-left: solid #0099ff 2px
+        border-right: solid #0099ff 2px
+        border-bottom: solid transparent 2px
+        border-top: solid transparent 2px
+        animation: btn-anim 1s infinite linear
+    p,a
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%,-50%)
+        font-size: 1.2rem
+
+@keyframes btn-anim
+    0%
+        filter: brightness(1)
+        transform: rotate(0deg)
+    50%
+        filter: brightness(1.5)
+    100%
+        filter: brightness(2)
+        transform: rotate(359deg)
+
 .type
     font-size: 2rem
+    color: rgb(100,151,178)
+.type
+    text-shadow: 2px 2px 2px rgb(218, 218, 218)
+.hello-my-name
+
+.jad-img
+    border-radius: 50%
+    width: 300px
+    box-shadow: 5px 2px 10px rgb(100,151,178)
+@media ( max-width: 700px )
+    .type
+        font-size: 1.2rem
