--- a/src/section.sass
+++ b/src/section.sass
@@ -3,3 +3,6 @@
     width: 85%
     height: 100%
     background-color: rgb(255, 255, 255)
+@media ( max-width:  700px)
+    .section
+        width: 93%
