--- a/src/style.sass
+++ b/src/style.sass
@@ -39,3 +39,9 @@ a:hover
 a:active
     color: rgb(1, 1, 1)
     text-decoration: none
+p
+    font-size: 1.5rem
+    background-color: rgba(255, 255, 255, 0.657)
+@media ( max-width:  700px)
+    p
+        font-size: 1.2rem
