--- a/src/section.sass
+++ b/src/section.sass
@@ -2,7 +2,7 @@
     position: absolute
     width: 85%
     height: 100%
-    background-color: rgb(255, 255, 255)
+    background-color: transparent
 @media ( max-width:  700px)
     .section
         width: 93%
