--- a/src/profile.sass
+++ b/src/profile.sass
@@ -23,7 +23,8 @@
 
 @media ( max-width: 700px )
     .profile
-        padding-top: -1rem
+        padding-top: 1rem
+        margin-top: 0
         .fa-address-card
             font-size: 3.2rem
         p
@@ -32,3 +33,5 @@
             margin: 1rem
             font-size: 2.2rem
             color: rgb(3,92,150)
+        .jad2
+            width: 250px
