--- a/src/profile.sass
+++ b/src/profile.sass
@@ -30,7 +30,7 @@
         p
             width: 95%
         .fa-tasks,.fa-sim-card,.fa-handshake,.fa-life-ring
-            margin: 1rem
+            margin: 0.5rem 1rem
             font-size: 2.2rem
             color: rgb(3,92,150)
         .jad2
