--- a/src/profile.sass
+++ b/src/profile.sass
@@ -1,5 +1,6 @@
 .profile
     padding-top: 5rem
+    min-height: 100vh
     .fa-address-card
         font-size: 4.2rem
         color: rgb(3,92,150)
