--- a/src/section.sass
+++ b/src/section.sass
@@ -1,7 +1,7 @@
 .section
     position: absolute
     width: 85%
-    height: 100%
+    min-height: 100%
     background-color: transparent
 @media ( max-width:  700px)
     .section
