--- a/src/style.sass
+++ b/src/style.sass
@@ -9,6 +9,7 @@ body
     width: 100%
     height: 100vh
     font-family: 'Share Tech', sans-serif
+    overflow: hidden
 *
     box-sizing: border-box
     padding: 0
