--- a/src/skills.sass
+++ b/src/skills.sass
@@ -23,6 +23,7 @@
         transform: rotate(359deg)
 @media ( max-width: 700px )
     .skills
+        margin-top: 1rem
         img
             margin-top: 0.3rem
             width: 3rem
