--- a/src/home.sass
+++ b/src/home.sass
@@ -31,7 +31,10 @@
         left: 50%
         transform: translate(-50%,-50%)
         font-size: 1.2rem
-
+.contact
+    .fas
+        color: #0099ff
+        font-size: 1.2rem
 @keyframes btn-anim
     0%
         filter: brightness(1)
