--- a/src/home.sass
+++ b/src/home.sass
@@ -57,5 +57,7 @@
     width: 300px
     box-shadow: 5px 2px 10px rgb(100,151,178)
 @media ( max-width: 700px )
+    .home
+        margin-top: 0.5rem
     .type
         font-size: 1.2rem
